2014-02-11  Joey Ye  <joey.ye@arm.com>

        * arm/syscalls.c (_sbrk): Define as weak symbols.
        (_read, _write): Ditto.

2014-02-03  Richard Earnshaw  <rearnsha@arm.com>

	* aarch64/Makefile.in (RDIMON_SCRIPTS): Rule to build in-tree copies
	of scripts.
	(all): Build the in-tree copies of the scripts.
	(clean): Also delete the in-tree copies of the scripts.

2014-01-29  DJ Delorie  <dj@redhat.com>

	* msp430/Makefile.in (crt0-minrt.o, crtn-minrt.o): New.  Build
	from crt0.S with -DMINRT.
	(CRT_OBJS): Expand.
	(crt_%.o): New rule pattern.  Build multiple objects from crt0.S.
	* msp430/crt0.S: Further break out functionality.  Support -DMINRT
	that omits all init/fini logic.
	* msp430/crtn.S: Likewise.
	* msp430/msp430-sim.ld: Wildcard all .crt_* sections, sorted.
	* msp430/msp430.ld: Likewise.
	* msp430/msp430xl-sim.ld: Likewise.

2014-01-28  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* aarch64/cpu-init/rdimon-aem-el3.S (flat_map): Use bic-immediate
	form to clear WXN bit.

2014-01-24  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* aarch64/cpu-init/rdimon-aem-el3.S (flat_map): Clear WXN bit
	in SCTLR_EL3. Add dsb.

2014-01-10  Jeff Johnston  <jjohnstn@redhat.com>

	* arm/configure.in: Revert previous fix and change host_makefile_frag
	to calculate the absolute location of srcdir/../config/default.mh.
	* arm/configure: Regenerated.

2014-01-07  Jeff Johnston  <jjohnstn@redhat.com>

	* arm/configure.in: Fix host_makefile_frag to use ac_abs_srcdir.
	* arm/configure: Regenerated.

2013-12-04  Steve Ellcey <sellcey@mips.com>

	* mips/cfe_api.h: Include stdint.h.

2013-11-21  Daniel Ramirez <javamonn@gmail.com>

	* d30v/syscalls.c, i960/mon960.c, m68k/io-stat.c, mt/stat.c,
	spu/lstat.c, spu/stat.c: Add restrict keyword.

2013-11-21  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* aarch64/ftruncate.c: Include errno.h.
	(ftruncate) Set errno.
	* aarch64/truncate.c: Include errno.h.
	(truncate) Set errno.

2013-11-20  Marcus Shawcroft  <marcus.shawcroft@arm.com>
