@@ -6,16 +6,16 @@
 void *
 _sbrk (incr)
      int incr;
-{ 
+{
    extern char   end; /* Set by linker.  */
-   static char * heap_end; 
-   char *        prev_heap_end; 
+   static char * heap_end;
+   char *        prev_heap_end;
 
    if (heap_end == 0)
-     heap_end = & end; 
+     heap_end = & end;
 
-   prev_heap_end = heap_end; 
-   heap_end += incr; 
+   prev_heap_end = heap_end;
+   heap_end += incr;
 
-   return (void *) prev_heap_end; 
-} 
+   return (void *) prev_heap_end;
+}
